// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the expected query for a single work area code 1`] = `
"SELECT
  SHORT_DESCRIPTION WORK_AREA_DESC,
  CODE WORK_AREA_CODE
FROM
  AHBRP.REF_DATA_SET,
  AHBRP.REF_DATA_CODE,
  AHBRP.REF_DATA_CODE_DESC
WHERE
  CODE IN ('TB')
  AND
  REF_DATA_SET_NAME= 'WORK_AREA'
  AND
  REF_DATA_SET.EFFECTIVE_TO_DATE IS NULL
  AND
  REF_DATA_SET.REF_DATA_SET_PK=REF_DATA_CODE.REF_DATA_SET_PK
  AND
  REF_DATA_CODE.EFFECTIVE_TO_DATE = '31-DEC-9999'
  AND
  REF_DATA_CODE.REF_DATA_CODE_PK=REF_DATA_CODE_DESC.REF_DATA_CODE_PK
  AND
  LANGUAGE_CODE='ENG'
"
`;

exports[`returns the expected query for multiple work area codes 1`] = `
"SELECT
  SHORT_DESCRIPTION WORK_AREA_DESC,
  CODE WORK_AREA_CODE
FROM
  AHBRP.REF_DATA_SET,
  AHBRP.REF_DATA_CODE,
  AHBRP.REF_DATA_CODE_DESC
WHERE
  CODE IN ('TB', 'GI', 'MC')
  AND
  REF_DATA_SET_NAME= 'WORK_AREA'
  AND
  REF_DATA_SET.EFFECTIVE_TO_DATE IS NULL
  AND
  REF_DATA_SET.REF_DATA_SET_PK=REF_DATA_CODE.REF_DATA_SET_PK
  AND
  REF_DATA_CODE.EFFECTIVE_TO_DATE = '31-DEC-9999'
  AND
  REF_DATA_CODE.REF_DATA_CODE_PK=REF_DATA_CODE_DESC.REF_DATA_CODE_PK
  AND
  LANGUAGE_CODE='ENG'
"
`;
